--- a/assets/css/pages/auth.css
+++ b/assets/css/pages/auth.css
@@ -1,38 +1,38 @@
 body {
-    background-color: #fff
+    background-color: #fff;
 }
 
 #auth {
     height: 100vh;
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 #auth #auth-right {
     background: url(../../../assets/images/4853433.png?45649b87e0b3f50bfa1372c6cdb4595f), linear-gradient(90deg, #2d499d, #3f5491);
-    height: 100%
+    height: 100%;
 }
 
 #auth #auth-left {
-    padding: 5rem 8rem
+    padding: 5rem 8rem;
 }
 
 #auth #auth-left .auth-title {
     font-size: 3rem;
-    margin-bottom: 0.7rem
+    margin-bottom: 0.7rem;
 }
 
 #auth #auth-left .auth-subtitle {
     color: #a8aebb;
     font-size: 1.3rem;
-    line-height: 2.5rem
+    line-height: 2.5rem;
 }
 
 #auth #auth-left .auth-logo {
-    margin-bottom: 2rem
+    margin-bottom: 2rem;
 }
 
 #auth #auth-left .auth-logo img {
-    height: 2rem
+    height: 2rem;
 }
 
 #auth #auth-right .auth-logo img {
@@ -41,18 +41,18 @@ body {
     margin-right: 9rem;
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
     #auth #auth-left {
-        padding: 5rem
+        padding: 5rem;
     }
 }
 
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
     #auth #auth-left {
-        padding: 5rem 3rem
+        padding: 5rem 3rem;
     }
 }
 
 body.theme-dark #auth-right {
-    background: url(../../../assets/images/4853433.png?45649b87e0b3f50bfa1372c6cdb4595f), linear-gradient(90deg, #2d499d, #3f5491)
+    background: url(../../../assets/images/4853433.png?45649b87e0b3f50bfa1372c6cdb4595f), linear-gradient(90deg, #2d499d, #3f5491);
 }
